apps/paperless-ngx/migrate-data.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tmp
  namespace: restricted
spec:
  containers:
    - name: tmp
      image: instrumentisto/rsync-ssh
      command: ["sh", "-c", "sleep 3600"]
      volumeMounts:
        - mountPath: "/data"
          name: data
        - mountPath: "/data-media"
          name: media
  volumes:
    - name: data
      persistentVolumeClaim:
        claimName: paperless-data
    - name: media
      persistentVolumeClaim:
        claimName: paperless-media
