apps/paperless-ngx/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless
  labels:
    app: paperless
    app.kubernetes.io/name: paperless
  namespace: restricted
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless
  template:
    metadata:
      labels:
        app: paperless
      namespace: restricted
    spec:
      containers:
        - name: redis
          image: redis:7
          volumeMounts:
            - name: redis-data
              mountPath: /data
          #args: ["--appendonly", "yes"]

        - name: paperless-webserver
          image: ghcr.io/paperless-ngx/paperless-ngx:latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: paperless-data
              mountPath: /usr/src/paperless/data
            - name: paperless-media
              mountPath: /usr/src/paperless/media
            - name: export
              mountPath: /usr/src/paperless/export
            - name: consume
              mountPath: /usr/src/paperless/consume
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: redis-data
        - name: paperless-data
          persistentVolumeClaim:
            claimName: paperless-data
        - name: paperless-media
          persistentVolumeClaim:
            claimName: paperless-media
        - name: export
          persistentVolumeClaim:
            claimName: paperless-export
        - name: consume
          persistentVolumeClaim:
            claimName: paperless-consume

---
apiVersion: v1
kind: Service
metadata:
  name: paperless
  namespace: restricted
spec:
  type: ClusterIP
  selector:
    app: paperless
  ports:
    - name: http
      port: 8000
      targetPort: 8000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless
  namespace: restricted
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  ingressClassName: nginx
  rules:
    - host: "docs.bugaychuk.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: paperless
                port:
                  number: 8000
